Bug 155278 - UI: Status bar icons are slightly oversized (clipped)
Summary: UI: Status bar icons are slightly oversized (clipped)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:7.6.0
Keywords: implementationError
Depends on:
Blocks: Statusbar Icon-Themes
  Show dependency treegraph
 
Reported: 2023-05-13 11:44 UTC by Telesto
Modified: 2023-05-16 09:03 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot 7600 (52.65 KB, image/jpeg)
2023-05-13 11:45 UTC, Telesto
Details
7.6.0.0.alpha1+ screenshot of Breeze (dark) icon theme on Ubuntu 20.04 + GNOME 3.36.8 (16.02 KB, image/png)
2023-05-14 09:00 UTC, Stéphane Guillou (stragu)
Details
task bar icons Win10 on 1920x1080 display at 100% os/DE scale factor (168.85 KB, image/png)
2023-05-14 16:50 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2023-05-13 11:44:32 UTC
Description:
UI: Status bar icons are slightly oversized

Steps to Reproduce:
1. Open Writer
2. Look at the status bar

Actual Results:
* Save icon clipped at top and bottom
* Single page/multipage icon clipped at bottom

Expected Results:
Properly scaled icons


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 99a88c9e55872214ce01d89447d18708e47e956b
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 1 Telesto 2023-05-13 11:45:08 UTC
Created attachment 187244 [details]
Screenshot 7600
Comment 2 Stéphane Guillou (stragu) 2023-05-13 20:47:00 UTC
Reproduced on Linux with:

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 99a88c9e55872214ce01d89447d18708e47e956b
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

I can see it with icon sets Colibre, Breeze and Sukapura.
Sifr and Elementary not as affected.

Also noticed on macOS.

Bibisected with linux-64-7.6 repo to first bad commit cfba1cba20f2309cd93aa6fd5f3fbe0fff40bd40 which points to core commit:

commit 62a0eb0a604a91b84d346fb50a12f868dbf7147f
author	Heiko Tietze <tietze.heiko@gmail.com>	Fri Mar 03 10:31:43 2023 +0100
committer	Rizal Muttaqin <rizmut@libreoffice.org>	Sun Mar 05 02:33:20 2023 +0000
Resolves tdf#153344 - Resize View Mode icon in statusbar to 16px
Also removed the "_10x22/24" from the icons
Space between icons now generated per code
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148163

Not calling it a regression, but maybe an implementation error? Heiko and Rizal, can we improve this fix so those three icon themes don't look clipped?
Comment 3 Stéphane Guillou (stragu) 2023-05-13 20:50:10 UTC
(In reply to Stéphane Guillou (stragu) from comment #2)
> I can see it with icon sets Colibre, Breeze and Sukapura.

Karasa Jaga too.
Comment 4 V Stuart Foote 2023-05-13 21:45:45 UTC
Seems to be a os/DE scaling factor issue.

On Windows builds with os/DE scaling at 125% the icon for buttons on the taskbar fit fine--no clipping.  And if I increase to 175% still no issue, they fit. Didn't try any higher scaling (working on something else so can't restart).

@Telesto, stragu -- what os/DE scaling are you working at?  A HiDPI issue maybe?

=-testing-=
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: e08c910f9ee520ce00fe99d6dab9988138996ee3
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

likewise no scaling issues with Skia Vulkan or raster rendering either
Comment 5 Stéphane Guillou (stragu) 2023-05-14 09:00:17 UTC
Created attachment 187263 [details]
7.6.0.0.alpha1+ screenshot of Breeze (dark) icon theme on Ubuntu 20.04 + GNOME 3.36.8

(In reply to V Stuart Foote from comment #4)
> @Telesto, stragu -- what os/DE scaling are you working at?  A HiDPI issue
> maybe?

Ubuntu 20.04 with GNOME 3.36.8 + Wayland, no scaling (default 100%), screen resolution is 1920×1080. LO profile reset.
Comment 6 V Stuart Foote 2023-05-14 16:50:34 UTC
Created attachment 187279 [details]
task bar icons Win10 on 1920x1080 display at 100% os/DE scale factor

Guess it is os/DE dependent then, it does not affect Win10 builds. 

And @Telesto is on Win8.1, though not clear how he gets side-by-side pages at 100% zoom in 1920px.
Comment 7 Heiko Tietze 2023-05-15 06:53:33 UTC
Most likely related to gtk3, no issue here with kf5.
Comment 8 Stéphane Guillou (stragu) 2023-05-15 12:58:11 UTC
(In reply to Heiko Tietze from comment #7)
> Most likely related to gtk3, no issue here with kf5.

Same issue for kf5 (cairo+xcb), kf5 (cairo+wayland), gen and qt5 (qfont+xcb) VCLs.
Comment 9 Heiko Tietze 2023-05-15 13:30:30 UTC
Perhaps https://gerrit.libreoffice.org/c/core/+/151768 works for you (minimum statusbar height now 16px or text height + offset).
Comment 10 Commit Notification 2023-05-16 06:06:12 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3e602a74c8de7553ca2340e695ac6a6ec396e1b8

Resolves tdf#155278 - Adjust minimum statusbar height according icons

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Stéphane Guillou (stragu) 2023-05-16 09:03:53 UTC
Fix verified, thank Heiko!

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 22950a9b008e1bb22fa9e54b5d45715e25fee764
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded