Resolves tdf#155278 - Adjust minimum statusbar height according icons

Change-Id: I7dbcf35f338bfe87702afb45651cd99630efe875
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151768
Reviewed-by: Stéphane Guillou <stephane.guillou@libreoffice.org>
Tested-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>